--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,9 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="187dp"
+        android:background="#bb0"
+        android:textColor="#fff"
+        android:textColorHighlight="#bb0"
         android:layout_weight="1" />
 
     <AutoCompleteTextView
@@ -21,6 +24,8 @@
         android:layout_width="377dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:background="#3b5998"
+        android:textColor="#fff"
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="13dp"
